[package]
name = "construct"
version = "0.1.0"
authors = ["Peter Lyons <pete@peterlyons.com>"]

[dependencies]
base64 = "0.9.0"                # encodes and decodes base64 as bytes or utf8
der-parser = "0.4.4"
nom = "3.2.1"
# x509-parser = { path = "../x509-parser" }
x509-parser = "0.1.0"
time = "0.1"
